--- a/app/k8s-external/svnp.yaml
+++ b/app/k8s-external/svnp.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-clusterip-external-10905
+  name: nginx-nodeport-10905
   labels:
     tier: backend
 spec:
+  type: NodePort
   selector:
     app: nginx-app-10905
     tier: backend
   ports:
-  - protocol: TCP
-    port: 10909
-  externalIPs:
-  - 146.59.19.222    
+    - port: 80
+      targetPort: 80
+      nodePort: 30007
